# RectRay

./: .gitignore  README.md  index.html  meson.build  meson.patch  rectray_glfw_imgui.js  rectray_glfw_imgui.wasm  wasm.ini
.github/workflows/: build_wasm.yml
examples/glfw_imgui/: gl_api.h  main.cpp  meson.build  plane.cpp  plane.h  platform.cpp  platform.h  renderer.cpp  renderer.h  scene.cpp  scene.h  triangle.cpp  triangle.h
src/: meson.build  rectray.h
src/rectray/: camera.h  context.h  drawlist.h  gui.h  interface.h  intersects.h  linearalgebra.h  screen.h  viewport.h
src/rectray/drag/: drag.h  translation.h
subprojects/: DirectXMath.wrap
subprojects/packagefiles/imgui/: meson.build
